<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pool-score-keeper</string>
    <string name="game_chooser_screen_content">Let\'s Play Pool</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_straight_pool">Scoring Straight Pool</string>
    <string name="title_activity_straight_pool_start">Let\'s Play Straight Pool</string>
    <string name="cowboy_pool_button">Cowboy</string>
    <string name="playing_straight_pool_screen_content">Playing Straight Pool</string>
    <string name="straight_pool_button">Straight Pool</string>
    <string name="straight_pool_start_content">Who is playing?</string>
    <string name="straight_pool_rules_button">Straight Pool Rules</string>
    <string name="straight_pool_default_points_to_win">50</string>
    <string name="shot_made">Shot made</string>
    <string name="current_rack_total">Current Rack</string>
    <string name="game_total">Current Totals</string>
    <string name="default_player1Name">Minnesota Fats</string>
    <string name="default_player2Name">Fast Eddie</string>
    <string name="foul">Foul</string>
    <string name="consecutive_fouls">Consecutive Fouls</string>
    <string name="total_fouls">Total Fouls</string>
    <string name="missed_shot">Missed shot</string>
    <string name="missed_shot_total">Total missed shots</string>
    <string name="undo">Undo</string>
    <string name="players">Players</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="swap_players">Swap Players</string>
    <string name="whos_playing_title">Who\'s playing?</string>
    <string name="points_to_win">Points to Win?</string>
    <string name="points_needed">Points Needed to Win</string>
    <string name="lets_play">Let\'s Play Pool</string>
    <string name="general_pool_rules_button">General Pool Rules</string>
    <string name="new_game_button">New Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_score_straight_pool">Straight Pool Score Board</string>

</resources>