<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pool_table_felt"
    tools:context=".ScoreStraightPoolActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

        <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TableRow
            android:id="@+id/straightPoolScore1Row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
            android:text=""
            />
            
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
            android:text=""
            />

           <EditText
            android:id="@+id/player1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black_overlay"
		    android:text="@string/default_player1Name"  
			android:layout_weight="1" 
            android:gravity="center"
            android:inputType="textCapWords" >
           <requestFocus />
          </EditText>
            <EditText
            android:id="@+id/player2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black_overlay"
		    android:text="@string/default_player2Name"  
			android:layout_weight="1" 
            android:gravity="center"
            android:inputType="textCapWords" >
          </EditText>           
            
        </TableRow>
       <TableRow
            android:id="@+id/straightPoolScore2Row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/ballDownButton"
                style="@style/AppTheme"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shot_made" />

           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_weight="1"
            android:text="@string/current_rack_total"
            />
            
           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
 	        android:gravity="center"
            android:text="10"
            />
            
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
 	        android:gravity="center"
			android:layout_weight="1" 
            android:text="20"
            />

          </TableRow>
            
       <TableRow
            android:id="@+id/straightPoolScore3Row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/undoButton"
                style="@style/AppTheme"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/missed_shot" />

           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_weight="1"
            android:text="@string/game_total"
            />
            
           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
 	        android:gravity="center"
            android:text="10"
            />
            
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
 	        android:gravity="center"
			android:layout_weight="1" 
            android:text="20"
            />

          </TableRow>
       
       <TableRow
            android:id="@+id/straightPoolScore4Row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/foulButton"
                style="@style/AppTheme"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foul" />

           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/consecutive_fouls"
            />
            
           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
 	        android:gravity="center"
            android:text="10"
            />
            
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
 	        android:gravity="center"
			android:layout_weight="1" 
            android:text="20"
            />

          </TableRow>
       <TableRow
            android:id="@+id/straightPoolScore5Row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_weight="1"
            android:text=" "
            />
            
           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_weight="1"
            android:text="@string/total_fouls"
            />
            
           <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_weight="1" 
 	        android:gravity="center"
            android:text="10"
            />
            
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
 	        android:gravity="center"
			android:layout_weight="1" 
            android:text="20"
            />

          </TableRow>
       </TableLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/Button01"
                style="@style/ButtonBarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showGeneralPoolRules"
                android:text="@string/general_pool_rules_button" />

            <Button
                android:id="@+id/dummy_button"
                style="@style/ButtonBarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="showStraightPoolRules"
                android:text="@string/straight_pool_rules_button" />
        </LinearLayout>
    </FrameLayout>

    

</RelativeLayout>