<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pool_table_felt"
    tools:context=".StraightPoolStartActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/straight_pool_start_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >
		
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

           <TextView
	         android:id="@+id/straightPoolPlayers"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/whos_playing_title"
	         android:textAppearance="?android:attr/textAppearanceLarge" />
        
            
          <EditText
            android:id="@+id/straightPoolPlayer1Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_overlay"
		    android:hint="@string/player1"  
	        android:layout_below="@+id/straightPoolPlayers"
            android:ems="20"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="textPersonName" >

              <requestFocus />
          </EditText>
              
        <EditText
            android:id="@+id/straightPoolPlayer2Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_overlay"
		    android:hint="@string/player2"  
            android:ems="20"
	        android:layout_below="@+id/straightPoolPlayer1Name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="textPersonName" >
        </EditText>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/dummy_button"
                style="@style/ButtonBarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="launchPlayStraightPoolScreen"
                android:layout_weight="1"
                android:text="@string/lets_play" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>